feat: decisão 2 — a substituição vira os quatro níveis da ADR-009 §3.10
PREFERRED / ACCEPTABLE / ALTERNATIVE / FORBIDDEN, com ordem de
preferência. O padrão não mudou de comportamento: o que era "não" virou
FORBIDDEN, o que era "sim" virou ACCEPTABLE. O que nasceu foi a ordem, e
é ela que separa aceitar de preferir — sim e não não sabem dizer "use
este se não houver aquele".

Nasceu `Substitution` em core.type, com a ordem do enum valendo como
ordem da preferência, e `byPreference` devolvendo o que serve do melhor
para o pior. Empate dentro do nível se desfaz pela ordem do
ResourceType, e não por sorteio: vila que cresce diferente a cada sessão
é vila que ninguém depura.

ALTERNATIVE ficou vazio, e não por esquecimento. Implementar a política
esbarrou na Regra 27, que é imutável: o construtor aguarda o bloco
específico. A substituição não é lida por ele — é lida por
ResourceDemand.deficit, que decide quais tarefas abrir. Declarar que
pedregulho serve por arenito faria a colônia concluir que a meta está
cumprida e não mandar o mineiro cavar, enquanto o construtor espera para
sempre pelo arenito que ninguém foi buscar. É o defeito de 2026-08-22
por outro caminho.

Por isso a madeira é segura e a pedra não: a meta de madeira é genérica
de propósito — OAK_LOG responde pelo grupo inteiro em ColonyGoals, e o
construtor não pede espécie. A meta de pedra nomeia o bloco da casa
daquele bioma.

Entrou um teste que é guarda, e não gosto: nada pode ser declarado
ALTERNATIVE enquanto a Regra 27 estiver de pé. Ele sai no dia em que ela
sair, e a variedade que a ADR quer passa a caber. Isso virou a decisão
10 no TODO.

Verificado: ./gradlew build (475 unitários) e runGametest (167 testes).